fix spacing in reset area

--- a/static/css/sqncd.css
+++ b/static/css/sqncd.css
@@ -71,7 +71,7 @@ h1 {
     flex-direction: column;
     font-size: 15px;
     justify-content: space-evenly;
-    gap: 5px;
+
     align-items: center;
     color: #BC81BF;
 }
@@ -185,9 +185,8 @@ select {
 .resetButtonArea {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
 }
 
 .resetHouseArea {
@@ -195,12 +194,13 @@ select {
     align-items: center;
     justify-content: space-evenly;
     gap: 5px;
-
 }
 
 .resetHouse {
     display: flex;
-    justify-content: space-around;
+    font-size: 13px;
+    justify-content: space-between;
+    gap: 5px;
     align-items: center;
     flex-direction: column;
     color: #BC81BF;
